--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -67,3 +67,17 @@ p {
 .post-actions a.delete:hover {
     background-color: #f55;
 }
+
+.post-link {
+    text-decoration: none;
+    color: inherit;
+}
+
+.post-link:hover .post {
+    background-color: #f0f0f0;
+}
+
+.no-link-style {
+    color: inherit;
+    text-decoration: none;
+}
